--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <div id="page">
     
   <p id="heading">
-    Tik ,Tak, Toe Game - <b>Sohail</b>
+    Tik ,Tak, Toe Game <!-- <b>Sohail</b> -->
   </p>
  <label for="check" id="show"></label>
   <div id="checkbox_container">
